# magic

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
tinymagic/nlp/: helpers.py
tinymagic/vision/: datasets.py  helpers.py
